feat: add jpa services